# ndshapecheck

./: LICENSE  README.md  pyproject.toml
.github/workflows/: check.yml  deploy.yml  publish.yml
docs/source/: conf.py  contributing.rst  examples.rst  index.rst  quickstart.rst
src/shapecheck/: __init__.py  has_shape.py  shape_check.py  shape_rule.py
test/: test_shape_check.py  test_shape_rule.py
test/regression/: test_regression_18.py
