[project]
name = "shapecheck"
version = "0.1.0"
description = "A library for checking the shapes of multidimensional arrays."
readme = "README.md"
authors = [
    { name = "Joseph Agrane", email = "josephagrane@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
shapecheck = "shapecheck:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
