[project]
name = "shapecheck"
version = "0.2.0"
description = "A library for checking the shapes of multidimensional arrays."
readme = "README.md"
authors = [
    { name = "Joseph Agrane", email = "josephagrane@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
shapecheck = "shapecheck:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "numpy>=2.2.5",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-rtd-theme>=3.0.2",
]
